--- a/icingaexchange.yml
+++ b/icingaexchange.yml
@@ -8,11 +8,11 @@ type: Plugin
 license: gplv3
 releases: 
   - 
-    name: 1.2
-    description: "Changed policy check that you can list hosts with a specific policy name"
+    name: 1.3
+    description: "Added enhanced argument status:notstarted to check for not started backups (OmniCube command svt-backup-show just includes started backups). Bugfix for parameter -D. The --until argument is now being used for the OmniCube command. Timeout parameter is now also being used for the OmniCube commands and not just the SSH connect"
     files: 
       - 
         name: check_usolved_omnicube_backup.py
         url: "file:///check_usolved_omnicube_backup.py"
-        description: "1.2 release"
-        checksum: e2e95a1b07378ce294cf29a4efa726a1
+        description: "1.3 release"
+        checksum: 251eae89adb4f5c0dffedca0551c2176
