--- a/icingaexchange.yml
+++ b/icingaexchange.yml
@@ -9,10 +9,10 @@ license: gplv3
 releases: 
   - 
     name: 1.3
-    description: "Added enhanced argument status:notstarted to check for not started backups (OmniCube command svt-backup-show just includes started backups). Bugfix for parameter -D. The --until argument is now being used for the OmniCube command. Timeout parameter is now also being used for the OmniCube commands and not just the SSH connect"
+    description: "The XML output has an extra line when too much results are found with the svt-backup-show. Added --max-results parameter to fix this."
     files: 
       - 
         name: check_usolved_omnicube_backup.py
         url: "file:///check_usolved_omnicube_backup.py"
-        description: "1.3 release"
-        checksum: 251eae89adb4f5c0dffedca0551c2176
+        description: "1.4 release"
+        checksum: 98b93809cb6c5e19ba57de331d472436
